<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="fr.wildcodeschool.rateeverything.AddPhotoActivity"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageButton
        android:id="@+id/iv_photo"
        android:layout_width="353dp"
        android:layout_height="306dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/add_image"
        android:contentDescription="@string/photo_de_ton_objet" />

    <RatingBar
        android:id="@+id/rating_bar_first_note"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_photo"
        android:layout_gravity="center"
        android:stepSize="1"
        android:numStars="5"/>

    <EditText
        android:id="@+id/et_title_img"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar_first_note" />

    <EditText
        android:id="@+id/et_description_img"
        android:layout_width="240dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar_first_note" />



    <Button
        android:id="@+id/button_share_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/partager"
        android:layout_gravity="center"/>

</LinearLayout>
</ScrollView>
