<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawer_user"
    tools:context="fr.wildcodeschool.rateeverything.ProfilUserActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                app:civ_border_width="3dp"
                app:civ_border_color="#4186A5"
                android:id="@+id/profil_photo_user"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/item_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/followers"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/item_pictures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/publications"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/button_modify_profil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"

                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
          
                android:onClick="changeImageProfil"
                android:text="@string/modifier_photo_de_profil"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/button_add_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="128dp"
                android:text="@string/suivre_cette_personne"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/edit_name_user"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/username"
                app:layout_constraintEnd_toEndOf="@+id/profil_photo_user"
                app:layout_constraintStart_toStartOf="@+id/profil_photo_user"
                app:layout_constraintTop_toBottomOf="@+id/profil_photo_user" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="52dp"
                android:text="@string/publicationsprofil"
                android:textColor="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:text="@string/followersprofil"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/profil_photo_user"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <GridView
            android:id="@+id/grid_view_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="auto_fit"
            android:horizontalSpacing="10dp"
            android:verticalSpacing="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:columnWidth="90dp"
            android:stretchMode="columnWidth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_user"
        app:headerLayout="@layout/header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start"
        />

</android.support.v4.widget.DrawerLayout>

